--- a/src/Resources/styles/front/common/components/list/accessories-products.less
+++ b/src/Resources/styles/front/common/components/list/accessories-products.less
@@ -92,7 +92,6 @@
         &__block {
             display: flex;
             flex-direction: column;
-            height: 100%;
 
             text-decoration: none;
             color: @color-base;
@@ -133,6 +132,8 @@
             text-align: center;
 
             &__availability {
+                margin-bottom: 10px;
+                
                 color: @color-brown-light;
                 font-size: @font-size-extra-small;
 
