--- a/src/Resources/styles/front/common/components/list/basket-additionals.less
+++ b/src/Resources/styles/front/common/components/list/basket-additionals.less
@@ -80,7 +80,6 @@
         &__in {
             display: flex;
             flex-direction: column;
-            height: 100%;
             padding: 0 @list-basket-additionals-item-padding 3px @list-basket-additionals-item-padding;
         }
 
@@ -129,6 +128,8 @@
             text-align: center;
 
             &__availability {
+                margin-bottom: 10px;
+                
                 color: @color-brown-light;
                 font-size: @font-size-extra-small;
 
